syntax = "proto3";

package calculator;
option go_package = "github.com/LeonTWYO/grpc_calculator/gpb";

service Calculator {
  rpc Add (AddRequest) returns (AddResponse);
  rpc Multiply (MultiplyRequest) returns (MultiplyResponse);
  rpc Divide (DivideRequest) returns (DivideResponse);
}

message AddRequest {
  int32 operand1 = 1;
  int32 operand2 = 2;
}

message AddResponse {
  int32 result = 1;
}

message MultiplyRequest {
  int32 factor1 = 1;
  int32 factor2 = 2;
}

message MultiplyResponse {
  int32 result = 1;
}

message DivideRequest {
  int32 dividend = 1;
  int32 divisor = 2;
}

message DivideResponse {
  int32 quotient = 1;
  int32 remainder = 2;
}
